# TeamSoftTask

./: CMakeLists.txt  Main.cpp  TaskList.cpp  TaskList.hpp  TeamSoft.sln  UserListener.cpp  UserListener.hpp
GTest/: CMakeLists.txt  GTest-TaskList-Task-Date.cpp  GTest-TaskList-Task-Date.hpp  GTest-TaskList-Task.cpp  GTest-TaskList-Task.hpp  GTest-UserListener.cpp  GTest-UserListener.hpp  Run.cpp
TeamSoft/: TeamSoft.vcxproj  TeamSoft.vcxproj.filters
